--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ python-dotenv==1.0.0
 slowapi==0.1.9
 # v1.3.1 - CF-Connecting-IP fix for accurate GeoIP behind Cloudflare
 tigzig-api-monitor>=1.3.0
+requests
+supabase
+openai
+python-multipart
